Center align correction

--- a/static/simple.css
+++ b/static/simple.css
@@ -41,7 +41,7 @@ body {
   font-size: 1.7rem;
   line-height: 1.5;
   display: grid;
-  grid-template-columns: 1fr min(45rem, 90%) 1fr;
+  grid-template-columns: 1fr 1fr  1fr;
   margin: 0;
 }
 body > * {
